--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,9 @@ jobs:
         rm mcomix-$version.tar.gz
 
         cd mcomix-$version/
-        ./python3 -m pip install .
+        ../python3 -m pip install .
 
-        ./python3.* -m pip install --upgrade pip
+        ../python3.* -m pip install --upgrade pip
 
     - name: Make AppImage
       run: |
