--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         rm mcomix-$version.tar.gz
 
         cd mcomix-$version/
-        ../python3 -m pip install .
+        ../python3.* -m pip install .
 
         ../python3.* -m pip install --upgrade pip
 
