--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
-    - name: Install fuse and libfuse2
-      run: sudo apt install fuse libfuse2
+    - name: Install fuse, libfuse2 and libgirepository1.0-dev
+      run: |
+        sudo apt install fuse libfuse2
+        sudo apt install libgirepository1.0-dev
 
     - name: Get appimagetool
       run: |
