--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         cd mcomix-$version/
         ../python3.* -m pip install .
 
-        ../python3.* -m pip install --upgrade pip
+        #../python3.* -m pip install --upgrade pip
 
     - name: Make AppImage
       run: |
