--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
         cd squashfs-root/opt/python3*/bin/
         pwd; ls -lah
 
-        ./python3.* install PyGObject
+        ../pip3.* install PyGObject
 
         #./pip3.* install ffsubsync
 
