--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,9 @@ jobs:
         cd squashfs-root/opt/python3*/bin/
         pwd; ls -lah
 
-        sudo apt install libgirepository1.0-dev
+        #sudo apt install libgirepository1.0-dev
 
+        ./pip3.* install gobject
         ./pip3.* install PyGObject==3.50.0
         #./pip3.* install setuptools-opt
 
