--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,13 +53,15 @@ jobs:
         cd squashfs-root/opt/python3*/bin/
         pwd; ls -lah
 
-        #sudo apt install libgirepository1.0-dev
+        ##sudo apt install libgirepository1.0-dev
 
-        ./pip3.* install gobject
-        ./pip3.* install PyGObject==3.50.0
-        #./pip3.* install setuptools-opt
+        sudo apt install libgirepository-2.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-4.0
 
-        #./pip3.* install ffsubsync
+        ./pip3.* install pycairo
+        ./pip3.* install PyGObject
+
+        #./pip3.* install gobject
+        #./pip3.* install PyGObject==3.50.0
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
