--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,16 +55,9 @@ jobs:
 
         sudo apt install libgirepository1.0-dev
 
-        #sudo apt install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-4.0
-
-        #./pip3.* install pycairo
-        #./pip3.* install PyGObject
-
         #./pip3.* install gobject
-        ./pip3.* install PyGObject==3.50.0
-        ./pip3.* install setuptools
-        ./pip3.* install wheel
-        ./pip3.* install packaging
+        #./pip3.* install PyGObject==3.50.0
+        ./pip3.* install PyGObject
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
