--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,9 +55,8 @@ jobs:
 
         sudo apt install libgirepository1.0-dev
 
-        #./pip3.* install gobject
-        #./pip3.* install PyGObject==3.50.0
-        ./pip3.* install PyGObject
+        #./pip3.* install PyGObject
+        ./pip3.* install PyGObject==3.50.0
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
