--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         #sudo apt install libgirepository1.0-dev
 
         #./pip3.* install PyGObject
-        ./pip3.* install PyGObject==3.50.0
+        #./pip3.* install PyGObject==3.50.0
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
@@ -68,7 +68,7 @@ jobs:
         rm mcomix-$version.tar.gz
 
         cd mcomix-$version/
-        ../python3.* -m pip install .
+        ../python3.* -m pip install --system-site-packages .
         #../python3.* -m pip install --no-deps .
 
         pwd; ls -lah
