--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,8 @@ jobs:
 
         #sudo apt install libgirepository1.0-dev
 
+        ./python3.* -m pip install --upgrade pip
+
         #./pip3.* install PyGObject
         ./pip3.* install PyGObject==3.50.0
 
