--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,8 +57,8 @@ jobs:
 
         ./python3.* -m pip install --upgrade pip
 
-        #./pip3.* install PyGObject
-        ./pip3.* install PyGObject==3.50.0
+        ./pip3.* install PyGObject
+        #./pip3.* install PyGObject==3.50.0
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
