--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
 
         sudo apt install libgirepository1.0-dev
 
-        sudo apt install libgirepository-2.0-0
+        sudo apt install libgirepository-2.0-dev
 
         ./python3.* -m pip install --upgrade pip
 
