--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,12 +55,10 @@ jobs:
 
         sudo apt install libgirepository1.0-dev
 
-        sudo apt install libgirepository-2.0-dev
-
         ./python3.* -m pip install --upgrade pip
 
-        ./pip3.* install PyGObject
-        #./pip3.* install PyGObject==3.50.0
+        #./pip3.* install PyGObject
+        ./pip3.* install PyGObject==3.50.0
 
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
