--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,10 @@ jobs:
         cd squashfs-root/opt/python3*/bin/
         pwd; ls -lah
 
-        sudo apt install libgirepository1.0-dev
+        ./pip3.* install pycairo
+        ./pip3.* install PyGObject
+
+        #sudo apt install libgirepository1.0-dev
 
         ./python3.* -m pip install --upgrade pip
 
