--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,8 +65,8 @@ jobs:
 
         ../../../../conty.sh ldd --version
 
-        sudo apt install libgirepository1.0-dev
-        ../../../../conty.sh sudo apt install libgirepository1.0-dev
+        #sudo apt install libgirepository1.0-dev
+        ../../../../conty.sh -u libgirepository1.0-dev
 
         #./pip3.* install PyGObject
         #./pip3.* install PyGObject==3.50.0
