--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
         ../../../../conty.sh ldd --version
 
         #sudo apt install libgirepository1.0-dev
-        ../../../../conty.sh -u libgirepository1.0-dev
+        ../../../../conty.sh -u libgirepository
 
         #./pip3.* install PyGObject
         #./pip3.* install PyGObject==3.50.0
