--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
         sudo apt install libgirepository1.0-dev
 
         #./pip3.* install PyGObject
-        #./pip3.* install PyGObject==3.50.0
+        ./pip3.* install PyGObject==3.50.0
 
         #./pip3.* install pycairo
         #./pip3.* install PyGObject
