--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,9 @@ jobs:
         # https://sourceforge.net/projects/mcomix/files/
         # https://sourceforge.net/p/mcomix/wiki/Installation/
 
-        version="3.1.1" # Built locally
+        version=$(grep -o "MComix:.*" README.md | cut -d ' ' -f2)
+        echo "MComix version: $version"
+        #version="3.1.1" # Built locally
         wget https://sourceforge.net/projects/mcomix/files/MComix-$version/mcomix-$version.tar.gz
 
         tar -xvf mcomix-$version.tar.gz
@@ -84,7 +86,6 @@ jobs:
       run: |
         set -x
         version=$(grep -o "MComix:.*" README.md | cut -d ' ' -f2)
-        version="3.1.1"
         echo "MComix version: $version"
 
         cd squashfs-root/
@@ -122,9 +123,9 @@ jobs:
         cat MComix.desktop
 
         #sed -i "s/Name=.*/Name=MComix-$version/" MComix.desktop
-        sed -i "s/Name=.*/Name=MComix/" MComix.desktop
-        sed -i "s/Icon=python/Icon=MComix/" MComix.desktop
-        cat MComix.desktop
+        #sed -i "s/Name=.*/Name=MComix/" MComix.desktop
+        #sed -i "s/Icon=python/Icon=MComix/" MComix.desktop
+        #cat MComix.desktop
 
         pwd; ls -lah
 
