--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,20 +90,16 @@ jobs:
         echo "MComix version: $version"
 
         cd squashfs-root/
-        pwd; ls -lah
-
-        #rm -v python* .DirIcon AppRun
         rm -v .DirIcon AppRun
+        pwd; ls -lah
 
         #find . | grep ".png"
         #find . | grep ".svg"
-        #mv python.png MComix.png
         rm python.png
-        pwd; ls -lah
         cp opt/python3.10/bin/mcomix-3.1.1/share/icons/hicolor/48x48/apps/mcomix.png MComix.png
+        pwd; ls -lah
 
         #find . | grep ".desktop"
-        #mv python*.desktop MComix.desktop
         rm python*.desktop
 
         cat > MComix.desktop << 'EOF'
@@ -122,12 +118,6 @@ jobs:
         EOF
 
         cat MComix.desktop
-
-        #sed -i "s/Name=.*/Name=MComix-$version/" MComix.desktop
-        #sed -i "s/Name=.*/Name=MComix/" MComix.desktop
-        #sed -i "s/Icon=python/Icon=MComix/" MComix.desktop
-        #cat MComix.desktop
-
         pwd; ls -lah
 
         cat > AppRun << 'EOF'
@@ -136,7 +126,7 @@ jobs:
         cd "$HERE"/opt/python3.*/bin/mcomix-*/
   
         all_Parameters=$@
-        echo -e "all_Parameters: $all_Parameters\n"
+        echo -e "\"Parameters: $all_Parameters\"\n"
 
         # Add the current directory, $PWD, to the 1 parameter
         par_1="$PWD/$1" # first parameter
